--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <center>
             <div>           
                     <label for="sentence">Sentence for password</label><br>
-                    <input type="text" id="sentence" value="i love my wife"  placeholder="The longer the sentence the better"><br>         
+                    <input type="text" id="sentence" value=""  placeholder="The longer the sentence the better" autofocus><br>         
                     <button id="btn" class="btn btn-sm btn-success">Generate</button> 
 
                     <div class="well" id="password"></div>
