created wrong login alert

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="container">
         <center>
             <div>           
-                    <label for="sentence">Sentence for password</label><br>
-                    <input type="text" id="sentence" value=""  placeholder="The longer the sentence the better" autofocus><br>         
-                    <button id="btn" class="btn btn-sm btn-success">Generate</button> 
+                <label for="sentence" id="sen">Sentence for password</label><br>
+                <input type="text" id="sentence" value=""  placeholder="The longer the sentence the better" autofocus><br>         
+                <button id="btn" class="btn btn-sm btn-success">Generate</button> 
 
-                    <div class="well" id="password"></div>
+                <div class="well" id="password"></div>
             </div>
         </center>
 
