added database support

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <center>
             <div>           
                 <label for="sentence" id="sen">Sentence for password</label><br>
-                <input type="text" id="sentence" value=""  placeholder="The longer the sentence the better" autofocus><br>         
-                <button id="btn" class="btn btn-sm btn-success">Generate</button> 
+                <input type="text" class="password" id="sentence" value="i love my wife"  placeholder="The longer the sentence the better" autofocus><br>         
+                <button id="btn" class="btn btn-sm btn-success">Generate</button> <br>
 
-                <div class="well" id="password"></div>
+                <input type="text" id="password" class="password" disabled>
             </div>
         </center>
 
