--- a/windows/login.html
+++ b/windows/login.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href="lib/css/bootstrap.css" rel="stylesheet">
-    <link href="lib/css/font-awesome.css">
-    <link href="lib/css/styles.css" rel="stylesheet">
-    <script src="lib/js/jquery-2.1.4.min.js"></script>
-    <script src="lib/js/bootstrap-3.1.1.min.js"></script>
+    <link href="../lib/css/bootstrap.css" rel="stylesheet">
+    <link href="../lib/css/font-awesome.css">
+    <link href="../lib/css/styles.css" rel="stylesheet">
+    <script src="../lib/js/jquery-2.1.4.min.js"></script>
+    <script src="../lib/js/bootstrap-3.1.1.min.js"></script>
     <title>Login</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
 
 <script>
     // You can also require other files to run in this process
-    require('./lib/js/login.js')      
+    require('../lib/js/login.js')      
 </script>
 
 </body>
